# SC-Gen-3

./: .gitignore  =4.41.0  ABOUT_INSTRUCTIONS_UPDATE.md  ADVANCED_SEMANTIC_ENHANCEMENT_GUIDE.md  AGENTS.md  BGE_OPTIMIZATION_SUMMARY.md  CH_CATEGORIES_REFERENCE.md  COMPANIES_HOUSE_RAG_SOLUTION.md  CURSOR_SYSTEM_PROMPT_COMPREHENSIVE.md  Companies_House_Cursor_Integration_Recommendations.docx  ENHANCED_RAG_IMPLEMENTATION_SUMMARY.md  ERROR_RESOLUTION_SUMMARY.md  FINAL_ERROR_RESOLUTION.md  HELP_PAGE_MODERNIZATION.md  HIERARCHICAL_RAG_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LAUNCHER_CLEANUP_SUMMARY.md  LAWMA_INTEGRATION_SUMMARY.md  LEGACY_CLEANUP_REPORT.md  LEGAL_MODELS_UPGRADE_SUMMARY.md  MULTI_AGENT_RAG_SYSTEM.md  OPTIMIZATION_SUMMARY.md  RAG_HALLUCINATION_FIX_SUMMARY.md  RAG_SYSTEM_README.md  README.md  SEMANTIC_VECTOR_DATABASE_GUIDE.md  SOTA_RAG_IMPLEMENTATION_GUIDE.md  Strategic_Counsel.desktop  Strategic_Counsel_Launcher.bat  UPDATED_HELP_DOCUMENTATION.md  about_page.py  advanced_vector_store.py  ai_utils.py  app.py  app.py.backup_before_rag_fix  app_utils.py  automatic_graph_generation.py  aws_textract_utils.py  benchmark_performance.py  ch_api_utils.py  (+99 more)
.old_launchers/: create_shortcut.vbs  launch_strategic_counsel.bat  launch_strategic_counsel_direct.bat  launch_strategic_counsel_simple.bat  setup_and_launch_SC_Gen3.bat  start_strategic_counsel.sh  start_strategic_counsel_old.sh
.streamlit/: config.toml
legal_rag/: __init__.py
legal_rag/ingest/: __init__.py  chunker.py  embed.py  pdf_reader.py
legal_rag/rag/: __init__.py
pleading_templates/: basic_claim.md  defence.md
rag_storage/Corporate Governance/: metadata.json
rag_storage/Corporate Governance/archived_documents/: 2023 02 23 - Group Particulars of Claim (2).pdf_aee40a58412f3b52.txt  A1.1 (Native).PDF_2b05f7b34fbaf1c4.txt  A1.2 (Native).PDF_66aa01f9d15f851d.txt  A1.3 (Native).PDF_3c2f9437b6d119ec.txt  A1.4 (Native).PDF_5a48c9bb0c9c9b9c.txt  A1.4.pdf_aa7d94ba75546ef1.txt  A1.5 (Native).PDF_5cb650f713f7473e.txt  archived_metadata.json
rag_storage/Legal Analysis/: metadata.json
rag_storage/companies_house_analysis/: metadata.json
rag_storage/companies_house_rag/: metadata.json
static/: force_light_theme.css  harcus_parker_style.css
test_output/: coverage_20250612_093240.xml  test-results_20250612_093152.xml  test-results_20250612_093240.xml
tests/: conftest.py  conftest_real.py  create_test_pdfs.py  requirements-test.txt  run_tests.py  test_ai_utils.py  test_ai_utils_real.py  test_app.py  test_app_real.py  test_app_utils.py  test_aws_textract_utils.py  test_aws_textract_utils_real.py  test_ch_pipeline.py  test_ch_pipeline_real.py  test_config.py  test_e2e.py  test_group_structure_utils.py  test_ocr_processing.py  test_remaining_functions.py  test_session_state.py  test_sidebar_widgets.py  test_strategic_counsel_dashboard.py  test_text_extraction_utils.py  test_text_extraction_utils_real.py  test_timeline.py
(+21 files in other folders)
